# kube-galaxy-test

./: .gitignore  DEVELOPMENT.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PLANNING_SUMMARY.md  QUICK_REFERENCE.md  README.md  pyproject.toml  tox.ini
.github/: ARCHITECTURE.md  copilot-instructions.md
.github/agents/: python.md
.github/scripts/: setup-juju-provider.sh
.github/workflows/: lint.yml  reusable-cluster-test.yml  reusable-validate-manifests.yml  test-baseline-clusters.yml  test-vsphere-clusters.yml  test-vsphere.yml  test.yml
components/cncf-conformance/: task.yaml
components/csi-driver-host-path/: csi-driver-host-path.yaml
docs/: IMPLEMENTATION_STATUS.md  class-based-components.md  component-lifecycle-hooks.md  copilot-competition-submission.md  hook-system-design.md  multi-node-orchestration.md  spread-based-component-tests-prompt.md  spread-based-component-tests.md
manifests/: baseline-k8s-1.33.yaml  baseline-k8s-1.34.yaml  baseline-k8s-1.35.yaml  baseline-k8s-1.36.yaml  single-node-no-cni.md  single-node-no-cni.yaml  smoketest-kind.yaml  smoketest-vsphere.yaml  smoketest.yaml  smoktest.yaml
manifests/overlays/: conformance-full.yaml  vsphere-juju.yaml
src/kube_galaxy/: __init__.py  __main__.py  cli.py
tests/: spread.yaml
tests/unit/: conftest.py  test_arch.py  test_artifact_server.py  test_cli.py  test_client.py  test_cluster.py  test_cluster_context.py  test_dockerio.py  test_gh.py  test_kubeconfig.py  test_loader.py  test_merger.py  test_models.py  test_paths.py  test_registry_mirror.py  test_status.py  test_units.py  test_validator.py  (+1 more)
(+108 files in other folders)
